compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:7:7: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies.
    b.foo()
      ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:10:19: error: initializer type mismatch: expected 'String', actual 'a.A'.
    val x: String = b.foo()
                  ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:10:23: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies.
    val x: String = b.foo()
                      ^^^
COMPILATION_ERROR
